Services|Refactor: keep main services running, even after a server restart

--- a/services/general/docker-compose.yaml
+++ b/services/general/docker-compose.yaml
@@ -70,6 +70,7 @@ services:
   glance:
     container_name: glance
     image: glanceapp/glance:v0.8.3
+    restart: unless-stopped
     volumes:
       - /home/${USERNAME}/services_data/glance/config:/app/config
       - /var/run/docker.sock:/var/run/docker.sock
