--- a/services/tools/docker-compose.yaml
+++ b/services/tools/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
   dozzle:
     container_name: dozzle
     image: amir20/dozzle:latest
+    restart: unless-stopped
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /home/${USERNAME}/services_data/dozzle:/data
