--- a/services/home_assistant/docker-compose.yaml
+++ b/services/home_assistant/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   homeassistant:
     container_name: homeassistant
     image: ghcr.io/home-assistant/home-assistant:stable
+    restart: unless-stopped
     volumes:
       - /home/${USERNAME}/services_data/homeassistant/config:/config
       - /etc/localtime:/etc/localtime:ro
