--- a/services/home_assistant/docker-compose.yaml
+++ b/services/home_assistant/docker-compose.yaml
@@ -7,8 +7,11 @@ services:
       - /home/${USERNAME}/services_data/homeassistant/config:/config
       - /etc/localtime:/etc/localtime:ro
       - /run/dbus:/run/dbus:ro
+      - /dev:/dev
     privileged: true
     network_mode: host
+    devices:
+      - /dev/ttyUSB0:/dev/ttyUSB0
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8123"]
       interval: 30s
