--- a/services/tools/docker-compose.yaml
+++ b/services/tools/docker-compose.yaml
@@ -77,11 +77,35 @@ services:
       - N8N_HOST=n8n.dynbase.xyz
       - N8N_PROTOCOL=https
       - WEBHOOK_URL=https://n8n.dynabase.xyz/
+      - DB_TYPE=postgresdb
+      - DB_POSTGRESDB_HOST=n8n_postgres
+      - DB_POSTGRESDB_PORT=5432
+      - DB_POSTGRESDB_DATABASE=n8n
+      - DB_POSTGRESDB_USER=n8n
+      - DB_POSTGRESDB_PASSWORD=${N8N_POSTGRES_PASSWORD}
+      - DB_POSTGRESDB_SCHEMA=public
     healthcheck:
       test: wget --spider http://localhost:5678/healthz > /dev/null 2>&1 || exit 1
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 10s
+
+  n8n_postgres:
+    container_name: n8n_postgres
+    image: postgres:16
+    restart: always
+    environment:
+      POSTGRES_USER: n8n
+      POSTGRES_PASSWORD: ${N8N_POSTGRES_PASSWORD}
+      POSTGRES_DB: n8n
+    volumes:
+      - /home/${USERNAME}/services_data/n8n/postgres:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U n8n -d n8n"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
       start_period: 10s
 
   ironmount:
