Services|Add: always run ironmount, even after server restart

--- a/services/tools/docker-compose.yaml
+++ b/services/tools/docker-compose.yaml
@@ -111,6 +111,7 @@ services:
   ironmount:
     container_name: ironmount
     image: ghcr.io/nicotsx/ironmount:v0.9
+    restart: unless-stopped
     cap_add:
       - SYS_ADMIN
     devices:
