--- a/services/tools/docker-compose.yaml
+++ b/services/tools/docker-compose.yaml
@@ -123,6 +123,33 @@ services:
       retries: 5
       start_period: 10s
 
+  tandoor:
+    container_name: tandoor
+    image: vabene1111/recipes:latest
+    environment:
+      - SECRET_KEY=YOUR_SECRET_KEY
+      - DB_ENGINE=django.db.backends.postgresql
+      - POSTGRES_HOST=tandoor_postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=djangodb
+      - POSTGRES_PASSWORD=${TANDOOR_POSTGRES_PASSWORD}
+      - POSTGRES_DB=djangodb
+    volumes:
+      - /home/${USERNAME}/services_data/tandoor/staticfiles:/opt/recipes/staticfiles
+      - /home/${USERNAME}/services_data/tandoor/mediafiles:/opt/recipes/mediafiles
+    depends_on:
+      - tandoor_postgres
+
+  tandoor_postgres:
+    container_name: tandoor_postgres
+    image: postgres:16-alpine
+    volumes:
+      - /home/${USERNAME}/services_data/tandoor/postgresql:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_USER=djangodb
+      - POSTGRES_PASSWORD=${TANDOOR_POSTGRES_PASSWORD}
+      - POSTGRES_DB=djangodb
+
 networks:
   default:
     external: true
