--- a/services/tools/docker-compose.yaml
+++ b/services/tools/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   dozzle:
     container_name: dozzle
-    image: amir20/dozzle:latest
+    image: amir20/dozzle:v8.14.9
     restart: unless-stopped
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -91,16 +91,17 @@ services:
       retries: 5
       start_period: 10s
 
-  ironmount:
-    container_name: ironmount
-    image: ghcr.io/nicotsx/ironmount:v0.9
+  zerobyte:
+    container_name: zerobyte
+    image: ghcr.io/nicotsx/zerobyte:v0.13
     restart: unless-stopped
     cap_add:
       - SYS_ADMIN
     devices:
       - /dev/fuse:/dev/fuse
     volumes:
-      - /var/lib/ironmount:/var/lib/ironmount
+      - /etc/localtime:/etc/localtime:ro
+      - /var/lib/zerobyte:/var/lib/zerobyte
       - /home/${USERNAME}/.config/rclone:/root/.config/rclone
       - /media/hd1/nextcloud/${USERNAME}/files:/nextcloud
       - /home/${USERNAME}/services_data:/services_data
@@ -113,7 +114,7 @@ services:
 
   docuseal:
     container_name: docuseal
-    image: docuseal/docuseal:latest
+    image: docuseal/docuseal:2.2.2
     volumes:
       - /home/${USERNAME}/services_data/docuseal:/data
     healthcheck:
@@ -125,7 +126,7 @@ services:
 
   tandoor:
     container_name: tandoor
-    image: vabene1111/recipes:latest
+    image: vabene1111/recipes:2.3.5
     environment:
       - SECRET_KEY=YOUR_SECRET_KEY
       - DB_ENGINE=django.db.backends.postgresql
