Services|Refactor: updated media services to use new folder structure for downloaded media

--- a/services/media/docker-compose.yaml
+++ b/services/media/docker-compose.yaml
@@ -8,10 +8,9 @@ services:
       - PGID=1000
       - TZ=Europe/Amsterdam
     volumes:
-      - /media/hd1/media/tvshows:/data/tvshows
-      - /media/hd1/media/movies:/data/movies
-      - /media/hd1/media/animes:/data/animes
+      - /media/hd1/data:/data
       - /home/${USERNAME}/services_data/jellyfin/config:/config
+      - /dev/dri:/dev/dri
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8096"]
       interval: 30s
@@ -94,9 +93,7 @@ services:
       - TZ=Europe/Amsterdam
     volumes:
       - /home/${USERNAME}/services_data/sonarr/config:/config
-      - /media/hd1/media/tvshows:/data/tvshows
-      - /media/hd1/media/animes:/data/animes
-      - /media/hd1/downloads/data/completed:/data/completed
+      - /media/hd1/data:/data
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8989/ping"]
       interval: 30s
@@ -109,13 +106,12 @@ services:
     image: linuxserver/radarr:6.0.4
     restart: unless-stopped
     environment:
-      - PUID=0
-      - PGID=0
+      - PUID=1000
+      - PGID=1000
       - TZ=Europe/Amsterdam
     volumes:
       - /home/${USERNAME}/services_data/radarr/config:/config
-      - /media/hd1/media/movies:/data/movies
-      - /media/hd1/downloads/data/completed:/data/completed
+      - /media/hd1/data:/data
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:7878/ping"]
       interval: 30s
@@ -130,7 +126,7 @@ services:
     user: 1000:1000
     volumes:
       - /home/${USERNAME}/services_data/navidrome:/data
-      - /media/hd1/media/music:/music:ro
+      - /media/hd1/data/media/music:/music:ro
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://localhost:4533"]
       interval: 10s
