--- a/services/media/docker-compose.yaml
+++ b/services/media/docker-compose.yaml
@@ -78,6 +78,9 @@ services:
     container_name: prowlarr
     image: linuxserver/prowlarr:2.3.0
     restart: unless-stopped
+    network_mode: service:gluetun
+    depends_on:
+      - gluetun
     environment:
       - PUID=1000
       - PGID=1000
@@ -95,6 +98,9 @@ services:
     container_name: sonarr
     image: linuxserver/sonarr:4.0.16
     restart: unless-stopped
+    network_mode: service:gluetun
+    depends_on:
+      - gluetun
     environment:
       - PUID=0
       - PGID=0
@@ -113,6 +119,9 @@ services:
     container_name: radarr
     image: linuxserver/radarr:6.0.4
     restart: unless-stopped
+    network_mode: service:gluetun
+    depends_on:
+      - gluetun
     environment:
       - PUID=1000
       - PGID=1000
