--- a/services/monitoring/docker-compose.yaml
+++ b/services/monitoring/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /media/hd1/.beszel:/extra-filesystems/sdb1:ro
+      - /media/hd2/.beszel:/extra-filesystems/sdd1:ro
+      - /media/hd3/.beszel:/extra-filesystems/sde1:ro
       - /home/${USERNAME}/services_data/beszel/agent_data:/var/lib/beszel-agent
     environment:
       LISTEN: 45876
