--- a/services/networking/docker-compose.yaml
+++ b/services/networking/docker-compose.yaml
@@ -21,6 +21,25 @@ services:
       timeout: 10s
       retries: 3
 
+  cloudflare_ddns:
+    container_name: cloudflare_ddns
+    image: timothyjmiller/cloudflare-ddns:latest
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
+    network_mode: host
+    environment:
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/${USERNAME}/services_data/cloudflare_ddns/config.json:/config.json
+    healthcheck:
+      test: ["CMD", "pgrep", "-f", "cloudflare-ddns"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+
   pangolin_newt:
     image: fosrl/newt
     container_name: pangolin_newt
