Services|Add: included databasus for backing up databases

--- a/services/backups/docker-compose.yaml
+++ b/services/backups/docker-compose.yaml
@@ -21,6 +21,13 @@ services:
       timeout: 5s
       retries: 5
 
+  databasus:
+    container_name: databasus
+    image: databasus/databasus:latest
+    volumes:
+      - /home/${USERNAME}/services_data/databasus-data:/databasus-data
+    restart: unless-stopped
+
 networks:
   default:
     external: true
