Services|Refactor: made Home Assistant capable of automatically discovering devices again on the local network, to access Sonos devices

--- a/services/home_assistant/docker-compose.yaml
+++ b/services/home_assistant/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - /run/dbus:/run/dbus:ro
       - /dev:/dev
     privileged: true
+    network_mode: host
     devices:
       - /dev/ttyUSB0:/dev/ttyUSB0
     healthcheck:
