--- a/services/media/docker-compose.yaml
+++ b/services/media/docker-compose.yaml
@@ -74,6 +74,21 @@ services:
       - WEBUI_PORT=8080
       - TORRENTING_PORT=6881
 
+  transmission:
+    container_name: transmission
+    image: lscr.io/linuxserver/transmission:latest
+    restart: unless-stopped
+    network_mode: service:gluetun
+    depends_on:
+      - gluetun
+    volumes:
+      - /home/${USERNAME}/services_data/transmission/config:/config
+      - /media/hd2/data/downloads:/downloads
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Amsterdam
+
   prowlarr:
     container_name: prowlarr
     image: linuxserver/prowlarr:2.3.0
