--- a/services/monitoring/docker-compose.yaml
+++ b/services/monitoring/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
       LISTEN: 45876
       KEY: 'ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIGkA/G2D4L3nHi5fxUSHU892XZTPdedNRmFvVM3acXVy'
       TOKEN: 745717b0-b1b0-4ed9-8759-aa2bf46ce1b4
-      HUB_URL: https://beszel.dynabase.xyz
+      HUB_URL: https://beszel.dynabase.nl
 
   adguardhome:
     container_name: adguardhome
