--- a/services/media/docker-compose.yaml
+++ b/services/media/docker-compose.yaml
@@ -52,7 +52,7 @@ services:
       - OPENVPN_PASSWORD=${TRANSMISSION_OPENVPN_PASSWORD}
       - SERVER_COUNTRIES=Netherlands,Belgium
     healthcheck:
-      test: ping -c l www.google.com || exit 1
+      test: ping -c 1 www.google.com || exit 1
       interval: 60s
       timeout: 20s
       retries: 5
