Services|Add: included audiobookshelf for audiobooks and podcasts

--- a/services/media/docker-compose.yaml
+++ b/services/media/docker-compose.yaml
@@ -190,6 +190,15 @@ services:
       timeout: 5s
       retries: 5
 
+  audiobookshelf:
+    container_name: audiobookshelf
+    image: ghcr.io/advplyr/audiobookshelf:latest
+    restart: unless-stopped
+    volumes:
+      - /home/${USERNAME}/services_data/audiobookshelf/config:/config
+      - /home/${USERNAME}/services_data/audiobookshelf/metadata:/metadata
+      - /media/hd2/data/media/audiobooks:/audiobooks
+      - /media/hd2/data/media/podcasts:/podcasts
 
 networks:
   default:
