--- a/services/media/docker-compose.yaml
+++ b/services/media/docker-compose.yaml
@@ -18,21 +18,22 @@ services:
       retries: 3
       start_period: 20s
 
-  jellyseerr:
-    image: fallenbagel/jellyseerr:latest
-    container_name: jellyseerr
+  seerr:
+    container_name: seerr
+    image: ghcr.io/seerr-team/seerr:latest
+    init: true
     restart: unless-stopped
     environment:
       - LOG_LEVEL=debug
       - TZ=Europe/Amsterdam
     volumes:
-      - /home/${USERNAME}/services_data/jellyseerr/config:/app/config
+      - /home/${USERNAME}/services_data/seerr/config:/app/config
     healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost:5055/api/v1/status"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      test: wget --no-verbose --tries=1 --spider http://localhost:5055/api/v1/status || exit 1
       start_period: 20s
+      timeout: 3s
+      interval: 15s
+      retries: 3
 
   gluetun:
     container_name: gluetun
